--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "react-native-gesture-handler": "~1.3.0",
     "react-native-maps": "^0.24.0",
     "react-native-material-textfield": "^0.12.0",
+    "react-native-ratings": "^6.5.0",
     "react-native-reanimated": "~1.1.0",
     "react-native-searchable-dropdown": "^1.1.1",
     "react-native-simple-radio-button": "^2.7.3",
-    "react-native-svg": "~9.5.1",
-    "react-native-webview": "^7.4.3",
+    "react-native-svg": "^9.5.3",
     "react-navigation": "^3.11.1",
     "tcomb-form-native": "^0.6.20"
   },
