--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-gesture-handler": "~1.3.0",
     "react-native-maps": "^0.24.0",
     "react-native-material-textfield": "^0.12.0",
+    "react-native-modal-datetime-picker": "^7.6.0",
     "react-native-ratings": "^6.5.0",
     "react-native-reanimated": "~1.1.0",
     "react-native-searchable-dropdown": "^1.1.1",
